Fix : Rectifies overlapping header section

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -3,20 +3,19 @@
 
 /*===== VARIABLES CSS =====*/
 :root{
-    --header-height: 3rem;
+    --header-height: 5rem;
     --font-medium: 500;
 }
-/*===== Colores =====*/
+/*===== Colors =====*/
 :root{
     --first-color: #5361FF;
     --white-color: #FAFAFF;
     --dark-color: #2a3b47;
     --text-color: #697477;
 }
-/*===== Fuente y tipografia =====*/
+/*===== Typography =====*/
 :root{
     --body-font: 'Montserrat', sans-serif;
-
     --big-font-size: 6.25rem;
     --h2-font-size: 1.25rem;
     --normal-font-size: .938rem;
@@ -29,7 +28,7 @@
         --small-font-size: .875rem;
     }
 }
-/*===== Margenes =====*/
+/*===== Margins =====*/
 :root{
     --mb-1: 0.5rem;
     --mb-2: 1rem;
